# Dear

./: .gitignore  CMakeLists.txt  ChangeLog.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
dear/: CMakeLists.txt  celery.py  dear.py  exec.py
libdear/: CMakeLists.txt  dear.c  poc.c
man/: CMakeLists.txt
test/: Makefile
