cmake_minimum_required(VERSION 2.8)

project(dear C)
set(DEAR_VERSION "2.4.3")

include(GNUInstallDirs)
install(FILES COPYING README.md ChangeLog.md
  DESTINATION ${CMAKE_INSTALL_DOCDIR})

include(CheckCCompilerFlag)
check_c_compiler_flag("-std=c99" C99_SUPPORTED)
if (C99_SUPPORTED)
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c99")
endif()

add_definitions(-D_GNU_SOURCE)
list(APPEND CMAKE_REQUIRED_DEFINITIONS -D_GNU_SOURCE)

if (NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE "Release")
endif()

set(CMAKE_OSX_ARCHITECTURES "i386;x86_64" CACHE STRING  "Rogue")

set(DEAR_LIB_FILE ${CMAKE_SHARED_LIBRARY_PREFIX}dear${CMAKE_SHARED_LIBRARY_SUFFIX})
set(DEAR_LIB_PATH "${CMAKE_INSTALL_LIBDIR}/dear")
set(DEFAULT_PRELOAD_FILE ${CMAKE_INSTALL_PREFIX}/${DEAR_LIB_PATH}/${DEAR_LIB_FILE} CACHE STRING "Default path to libdear.")

add_subdirectory(libdear)
add_subdirectory(dear)
add_subdirectory(man)
add_subdirectory(shell-completion)

set(CPACK_PACKAGE_NAME "dear")
set(CPACK_PACKAGE_CONTACT "Kwon-Young Choi")
set(CPACK_PACKAGE_VENDOR ${CPACK_PACKAGE_CONTACT})
set(CPACK_PACKAGE_VERSION ${DEAR_VERSION})
set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "DistributedEAR")
set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/COPYING")
set(CPACK_RESOURCE_FILE_README "${CMAKE_CURRENT_SOURCE_DIR}/README.md")
set(CPACK_PACKAGING_INSTALL_PREFIX ${CMAKE_INSTALL_PREFIX})
set(CPACK_RPM_PACKAGE_RELEASE "1%{?dist}")
set(CPACK_RPM_PACKAGE_LICENSE "GPLv3")
set(CPACK_RPM_PACKAGE_GROUP "Development/Tools")
set(CPACK_RPM_PACKAGE_URL "http://github.com/kwon-young/Dear")
set(CPACK_RPM_PACKAGE_DESCRIPTION "Dear is a tool to transparently distribute workload launched by build systems.")
set(CPACK_RPM_EXCLUDE_FROM_AUTO_FILELIST_ADDITION
    "${CMAKE_INSTALL_MANDIR}"
    "${CMAKE_INSTALL_MANDIR}/man1")
set(CPACK_DEBIAN_PACKAGE_SHLIBDEPS ON)
include(CPack)
